docs: api文档完善
